# axotly

./: Cargo.toml  LICENSE  README.md  install.sh  release.toml
.github/workflows/: release.yml
examples/: test1.ax  test4.ax  tests.ax
examples/users/: admins.ax  users.ax
src/: executor.rs  main.rs  runner.rs
src/cli/: args.rs  mod.rs  renderer_kind.rs
src/domain/: assertion.rs  http_request.rs  mod.rs  renderer.rs  test_case.rs
src/parser/: grammar.pest  mod.rs  parser.rs
src/renderers/: diff.rs  human.rs  mod.rs  response.rs
